202208040024: Removed Display Tiles flow (moving to a KWLP solution for launching flows).
202208092249: Use automatic sleep tracking from the Sleep app.
202208211031: Added check for watch on wrist for Sleep flow.
202208301500: Removed Google API sleep trigger.
202209031446: Fixed sleep init issues (hopefully!).
202209280103: Added interactive state check for sleep.
202210031440: Refactored context flow.
202210121844: Added test sleep EOD processes.
202210240915: Added sleep and finance daily updates at 2am.
202210250107: Adding BOD flow.
202210300154: Added readme and refactored fibres.
202211010037: Fixed folder paths...wait.
202211012307: Fixes here and there.
202211022110: Use sleep tracker for sleep init.
202211051945: Added manual sleep tracking start.
202212112211: Removed sleep start, now using qs tiles.
202212150010: Added manual sleep start tracking.
202302071210: Adjusted initialise flow
202302071214: Added toast to notify that context flows have started
202302071220: Initial version
202302071234: Adding init check function
202303231541: Added automated git commit function
202303231545: Bug fixes
202303231610: .
202303231611: .
202303231630: .
202303240026: Refactored EOD processes
202303242141: Testing EOD processes
202303242149: Fixing backup location
202303242221: .
202303242309: .
202303252333: Refactored the Context flow and subflows
202303260146: .
202303261435: .
202303261446: .
202303261554: .
202303261617: .
202303262324: Use config, not updateToken, for changes check in Context flow 
202303270026: Added metrics flow for testing
202303280012: .
202303280024: General fixes
202303281544: .
202303281544: .
202303282215: Testing for double flows
202303291408: .
202303300704: .
202303301721: .
202303310042: Use automate's built-in sleep track
202303311724: Testing sleep confidence
202304010121: Lowered sleep confidence
202304011424: .
202304040000: .
202304050024: .
202304050103: .
202304052151: Set EOD job to 00:01