@@ -1,1 +1,1 @@
-{"name":"context","blurb":"Flow to start other flows depending on the time or location.","version":"202304052151","configPath":"/storage/emulated/0/.config/Automate/1 Context/","comment":"Set EOD job to 00:01","uri":"content://com.llamalab.automate.provider/flows/8/data"}
+{"name":"context","blurb":"Flow to start other flows depending on the time or location.","version":"202304062247","configPath":"/storage/emulated/0/.config/Automate/1 Context/","comment":"Centralized configuration","uri":"content://com.llamalab.automate.provider/flows/8/data"}
