@@ -6,6 +6,5 @@
         "kg",
         "nights",
         "km",
-        "mnth",
-"yr"
+        "mnth"
 ]
