@@ -98,3 +98,4 @@
 202304050024: .
 202304050103: .
 202304052151: Set EOD job to 00:01
+202304062248: Centralized configuration
